[tool.poetry]
name = "nalo"
version = "0.1.0"
description = "A proxy application for Apollo using the Nalo SMS API"
authors = ["Tim Akinbo <41004+takinbo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
