[tool.poetry]
name = "nalo"
version = "0.1.0"
description = "A proxy application for Apollo using the Nalo SMS API"
authors = ["Tim Akinbo <41004+takinbo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
pydantic-extra-types = {extras = ["phonenumbers"], version = "^2.9.0"}
fastapi-cli = "^0.0.5"
loguru = "^0.7.2"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
